@@ -1,8 +1,8 @@
 Package: highlight
 Type: Package
 Title: Syntax highlighter
-Version: 0.1-7
-Date: 2010-02-14
+Version: 0.1-8
+Date: 2010-04-10
 Author: Romain Francois
 Maintainer: Romain Francois <romain@r-enthusiasts.com>
 Description: Syntax highlighter for R code based 
@@ -10,5 +10,6 @@ Description: Syntax highlighter for R code based
 	markup. Custom sweave driver performing syntax highlighting 
 	of R code chunks
 License: GPL (>= 3.0)
-Depends: R (>= 2.10.0), codetools, utils, parser (>= 0.0-9), Rcpp (>= 0.7.6)
+Depends: R (>= 2.10.0), tools, codetools, utils, parser (>= 0.0-9), Rcpp (>= 0.7.11.3)
+LinkingTo: Rcpp
 URL: http://r-forge.r-project.org/projects/highlight/, http://romainfrancois.blog.free.fr/index.php?category/R-package/highlight
